--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,9 @@ buildscript {
                 targetSdk : 33
         ]
         versions = [
-                kotlin       : "1.7.21",
-                androidX_core: "1.9.0",
-                material     : "1.7.0"
+                kotlin       : "1.9.10",
+                androidX_core: "1.10.1",
+                material     : "1.9.0"
         ]
     }
     dependencies {
@@ -23,8 +23,8 @@ buildscript {
 }
 
 plugins {
-    id("com.android.application") version "7.4.0" apply false
-    id("com.android.library") version "7.4.0" apply false
+    id("com.android.application") version '8.1.1' apply false
+    id("com.android.library") version '8.1.1' apply false
     id("org.jetbrains.kotlin.android") version "1.7.21" apply false
 }
 
