--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,10 @@ android {
 dependencies {
     implementation project(":library")
     implementation("org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}")
-    implementation("androidx.appcompat:appcompat:1.6.0")
+    implementation("androidx.appcompat:appcompat:1.6.1")
     implementation("androidx.cardview:cardview:1.0.0")
-    implementation("androidx.core:core-ktx:1.9.0")
-    implementation("androidx.recyclerview:recyclerview:1.2.1")
+    implementation("androidx.core:core-ktx:${versions.androidX_core}")
+    implementation("androidx.recyclerview:recyclerview:1.3.1")
     implementation("com.google.android.material:material:${versions.material}")
     implementation("com.squareup.picasso:picasso:2.71828")
 }
